# Telegram_Bot_For_Chess

./: .env.example  .gitignore  README.md  alembic.ini  main.py  mypy.ini  pyproject.toml  requirements.txt  schemas.py  validators.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
bot/: __init__.py  app.py  context.py
bot/middleware/: __init__.py  acl.py
docs/: assumptions.md
domain/: __init__.py  exceptions.py
handlers/: __init__.py  acl.py  help_handlers.py  role_handlers.py  ticket_handlers.py
infra/: __init__.py  config.py  db.py  logging.py
keyboards/: __init__.py  player_menu.py  report.py  start.py  ticket.py
repositories/: __init__.py  game_repository.py  player_repository.py  round_repository.py  table_repository.py  ticket_repository.py  tournament_repository.py
services/: __init__.py  access_control.py  acl_service.py  contracts.py  notification_gateway.py  notification_service.py  pairing_engine.py  pairing_service.py  registration_service.py  result_reporting.py  result_service.py  scoring.py  scoring_service.py  ticket_service.py  tournament_service.py  undo_service.py
src/bot/: config.py  (+3 more)
tests/: __init__.py  test_access_control_acl.py  test_app.py  test_config.py  test_db_init.py  test_domain_logic.py  test_domain_models.py  test_logging.py  test_logging_setup.py  test_main.py  test_pairing_engine.py  test_result_reporting.py  test_role_handlers.py  test_scoring_service.py  test_services.py  test_ticket_audit.py  test_ticket_handlers.py  test_tournament_commands.py  test_tournament_service.py  test_validators.py  utils.py
(+113 files in other folders)
