[project]
name = "telegram-bot-for-chess"
version = "0.1.0"
description = "Telegram bot for managing Swiss-system chess tournaments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.13.1,<4.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "alembic>=1.13.2,<2.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "pydantic-settings>=2.5.2,<3.0.0",
  "loguru>=0.7.2,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "ruff>=0.6.7,<1.0.0",
  "mypy>=1.11.2,<2.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
